# braw_to_mov

./: Pipfile  README.md  app.py  app.spec  b2m.icns  braw2mov.spec  braw2mov_linux.spec  braw_to_mov.py  braw_to_mov.ui  braw_to_mov_test.ui  find_path.py  gui.py  logger_settings.py  logic.py  main.py  pyproject.toml  qt6_tools-6.1.0.1.2-py3-none-any.whl  resource.qrc  resource.rcc  ui_imagedialog.py  ui_imagedialog.ui
